crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE1310_bad_str_strip_call.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1310 String `strip` call contains duplicate characters
 --> bad_str_strip_call.py:2:21
  |
2 | "Hello World".strip("Hello")
  |                     ^^^^^^^
  |

PLE1310 String `strip` call contains duplicate characters
 --> bad_str_strip_call.py:5:21
  |
5 | "Hello World".strip("Hello")
  |                     ^^^^^^^
  |

PLE1310 String `strip` call contains duplicate characters
 --> bad_str_strip_call.py:8:21
  |
8 | "Hello World".strip(u"Hello")
  |                     ^^^^^^^^
  |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:11:21
   |
11 | "Hello World".strip(r"Hello")
   |                     ^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:14:21
   |
14 | "Hello World".strip("Hello\t")
   |                     ^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:17:21
   |
17 | "Hello World".strip(r"Hello\t")
   |                     ^^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:20:21
   |
20 | "Hello World".strip("Hello\\")
   |                     ^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:23:21
   |
23 | "Hello World".strip(r"Hello\\")
   |                     ^^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:26:21
   |
26 | "Hello World".strip("🤣🤣🤣🤣🙃👀😀")
   |                     ^^^^^^^^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:30:5
   |
30 | /     """
31 | | there are a lot of characters to strip
32 | | """
   | |___^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:36:21
   |
36 |   "Hello World".strip("can we get a long " \
   |  _____________________^
37 | |                     "string of characters to strip " \
38 | |                     "please?")
   | |_____________________________^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:42:5
   |
42 | /     "can we get a long "
43 | |     "string of characters to strip "
44 | |     "please?"
   | |_____________^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:49:5
   |
49 | /     "can \t we get a long"
50 | |     "string \t of characters to strip"
51 | |     "please?"
   | |_____________^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:61:11
   |
61 | u''.strip('http://')
   |           ^^^^^^^^^
   |

PLE1310 String `lstrip` call contains duplicate characters (did you mean `removeprefix`?)
  --> bad_str_strip_call.py:64:12
   |
64 | u''.lstrip('http://')
   |            ^^^^^^^^^
   |

PLE1310 String `rstrip` call contains duplicate characters (did you mean `removesuffix`?)
  --> bad_str_strip_call.py:67:12
   |
67 | b''.rstrip(b'http://')
   |            ^^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:79:10
   |
79 | ''.strip('\\b\\x09')
   |          ^^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:80:10
   |
80 | ''.strip(r'\b\x09')
   |          ^^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:81:10
   |
81 | ''.strip('\\\x5C')
   |          ^^^^^^^^
   |

PLE1310 String `strip` call contains duplicate characters
  --> bad_str_strip_call.py:85:9
   |
85 | b.strip(b'//')
   |         ^^^^^
   |

PLE1310 String `rstrip` call contains duplicate characters (did you mean `removesuffix`?)
  --> bad_str_strip_call.py:89:12
   |
89 | foo.rstrip("//")
   |            ^^^^
   |

PLE1310 String `lstrip` call contains duplicate characters (did you mean `removeprefix`?)
  --> bad_str_strip_call.py:90:12
   |
90 | bar.lstrip(b"//")
   |            ^^^^^
   |
