crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE1507_invalid_envvar_value.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1507 Invalid type for initial `os.getenv` argument; expected `str`
 --> invalid_envvar_value.py:3:11
  |
3 | os.getenv(1)  # [invalid-envvar-value]
  |           ^
  |

PLE1507 Invalid type for initial `os.getenv` argument; expected `str`
 --> invalid_envvar_value.py:7:15
  |
7 | os.getenv(key=11)  # [invalid-envvar-value]
  |               ^^
  |

PLE1507 Invalid type for initial `os.getenv` argument; expected `str`
 --> invalid_envvar_value.py:8:11
  |
8 | os.getenv(["hello"])  # [invalid-envvar-value]
  |           ^^^^^^^^^
  |

PLE1507 Invalid type for initial `os.getenv` argument; expected `str`
  --> invalid_envvar_value.py:12:15
   |
12 | os.getenv(key=1 + "bar", default=1)  # [invalid-envvar-value]
   |               ^^^^^^^^^
   |

PLE1507 Invalid type for initial `os.getenv` argument; expected `str`
  --> invalid_envvar_value.py:14:11
   |
14 | os.getenv(1 if using_clear_path else "PATH_ORIG")
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
