crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE1519_singledispatch_method.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1519 [*] `@singledispatch` decorator should not be used on methods
  --> singledispatch_method.py:10:5
   |
 9 | class Board:
10 |     @singledispatch  # [singledispatch-method]
   |     ^^^^^^^^^^^^^^^
11 |     @classmethod
12 |     def convert_position(cls, position):
   |
help: Replace with `@singledispatchmethod`
   |
 1 ~ from functools import singledispatch, singledispatchmethod
 2 |
 …
 9 | class Board:
10 ~     @singledispatchmethod  # [singledispatch-method]
   |
note: This is an unsafe fix and may change runtime behavior

PLE1519 [*] `@singledispatch` decorator should not be used on methods
  --> singledispatch_method.py:15:5
   |
13 |         pass
14 |
15 |     @singledispatch  # [singledispatch-method]
   |     ^^^^^^^^^^^^^^^
16 |     def move(self, position):
17 |         pass
   |
help: Replace with `@singledispatchmethod`
   |
 1 ~ from functools import singledispatch, singledispatchmethod
 2 |
 …
14 |
15 ~     @singledispatchmethod  # [singledispatch-method]
   |
note: This is an unsafe fix and may change runtime behavior

PLE1519 [*] `@singledispatch` decorator should not be used on methods
  --> singledispatch_method.py:23:5
   |
21 |         pass
22 |
23 |     @singledispatch  # [singledispatch-method]
   |     ^^^^^^^^^^^^^^^
24 |     @staticmethod
25 |     def do(position):
   |
help: Replace with `@singledispatchmethod`
   |
 1 ~ from functools import singledispatch, singledispatchmethod
 2 |
 …
22 |
23 ~     @singledispatchmethod  # [singledispatch-method]
   |
note: This is an unsafe fix and may change runtime behavior
