crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE1700_yield_from_in_async_function.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1700 `yield from` statement in async function; use `async for` instead
 --> yield_from_in_async_function.py:7:5
  |
7 |     yield from l
  |     ^^^^^^^^^^^^
  |
