crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE2502_bidirectional_unicode.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE2502 Contains control characters that can permit obfuscated code
 --> bidirectional_unicode.py:2:1
  |
1 | # E2502
2 | print("שלום�")
  | ^^^^^^^^^^^^^^
3 |
4 | # E2502
  |

PLE2502 Contains control characters that can permit obfuscated code
 --> bidirectional_unicode.py:5:1
  |
4 | # E2502
5 | example = "x‏" * 100  #    "‏x" is assigned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |
7 | # E2502
  |

PLE2502 Contains control characters that can permit obfuscated code
  --> bidirectional_unicode.py:8:1
   |
 7 | # E2502
 8 | another = "x؜" * 50  #    "؜x" is assigned
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 9 |
10 | # E2502
   |

PLE2502 Contains control characters that can permit obfuscated code
  --> bidirectional_unicode.py:11:1
   |
10 | # E2502
11 | if access_level != "none��":  # Check if admin ��' and access_level != 'user
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     print("You are an admin.")
   |

PLE2502 Contains control characters that can permit obfuscated code
  --> bidirectional_unicode.py:17:1
   |
15 | # E2502
16 | def subtract_funds(account: str, amount: int):
17 |     """Subtract funds from bank account then �"""
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
18 |     return
19 |     bank[account] -= amount
   |
