crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE2502_bidirectional_unicode_preview.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE2502 Contains control characters that can permit obfuscated code
 --> bidirectional_unicode_preview.py:2:1
  |
1 | # E2502
2 | hello = "x؜" * 50  #    "؜x" is assigned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | # OK
  |
