crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLE2510_invalid_characters_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE2510 Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_syntax_error.py:5:6
  |
5 | b = '␈'
  |      ^
  |
help: Replace with escape sequence

invalid-syntax: missing closing quote in string literal
 --> invalid_characters_syntax_error.py:7:5
  |
7 | b = '␈
  |     ^^
  |

PLE2510 Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_syntax_error.py:7:6
  |
7 | b = '␈
  |      ^
  |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_syntax_error.py:8:6
  |
8 | b = '␈'
  |      ^
  |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:10:7
   |
10 | b = f'␈
   |       ^
   |
help: Replace with escape sequence

invalid-syntax: f-string: unterminated string
  --> invalid_characters_syntax_error.py:10:7
   |
10 | b = f'␈
   |       ^
   |

invalid-syntax: Expected FStringEnd, found newline
  --> invalid_characters_syntax_error.py:10:8
   |
10 | b = f'␈
   |        ^
   |

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:11:7
   |
11 | b = f'␈'
   |       ^
   |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:6
   |
13 | b = '␈' f'␈' '␈
   |      ^
   |
help: Replace with escape sequence

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:11
   |
13 | b = '␈' f'␈' '␈
   |           ^
   |
help: Replace with escape sequence

invalid-syntax: missing closing quote in string literal
  --> invalid_characters_syntax_error.py:13:14
   |
13 | b = '␈' f'␈' '␈
   |              ^^
   |

PLE2510 Invalid unescaped character backspace, use "\b" instead
  --> invalid_characters_syntax_error.py:13:15
   |
13 | b = '␈' f'␈' '␈
   |               ^
   |
help: Replace with escape sequence
